2001-03-28  Jeff Hobbs  <jeffh@gimlet.activestate.com>

	* unix/configure:
	* unix/tcl.m4: corrected IRIX-5.x config to not use -n32.
 	(english) [Patch 403626]

2001-03-28  Don Porter  <dgp@users.sourceforge.net>

	* tests/focus.test (focus-6.1):
	* tests/macEmbed.testi (unixEmbed-5.1):
	* tests/macMenu.test (macMenu-21.3):
	* tests/menu.testi (menu-27.1):
	* tests/unixEmbed.test (unixEmbed-8.2):
	* tests/unixWm.testi (unixWm-50.4):  Replaced all [load {} tk]
	in Tk test suite with [load {} Tk].  [Bug 220940, Patch 411952]

2001-02-13  Eric Melski  <ericm@interwoven.com>

	* doc/photo.n: [Bug 132213] Added clarification on interpretation
	of ranges for "photoName data -from" subcommand.

2001-02-12  D. Richard Hipp  <drh@hwaci.com>

        TIP #21: Asymmetric padding in the pack and grid geometry managers.
        With this changes, you can now say "-padx {10 20}" to put 10 pixels
        of padding on the left and 20 on the right.  Similar rules apply
        for vertical padding.  See the revised documentation for details.

2001-01-02  Andreas Kupries  <a.kupries@westend.com>

	* Everything below belongs together and implements TIP #8
	  (SF patch #102833).

	* win/tkWinWm.c (line 56f): Added icon structures.
	* win/tkWinWm.c (struct WmInfo, line 242): Added reference to
	  optional icon for titlebar.
	* win/tkWinWm.c (struct ThreadSpecificData, line 335): Added
	  reference to optional default icon for toplevel windows.
	* win/tkWinWm.c (line 387 ... 1169): All the new functions required
	  to deal with icon specifications, 'InitWm' changed.
	* win/tkWinWm.c (TkWmNewWindow, UpdateWrapper, TkWmDeadWindow, Tk_WmCmd):
	  Added initialization and handling of the new fields.
	* doc/wm.n: Documentation updated to explain the newly available
	  functionality. 

2000-12-13  jeff hobbs  <jhobbs@interwoven.com>

	* generic/tkObj.c (SetMMFromAny): Added ability to recognize
	double type object to speed up canvas coord calculations.
	[Patch #102471]
