@@ -1,3 +1,14 @@
+2001-03-29  Mo DeJong  <mdejong@redhat.com>
+
+	* library/entry.tcl (tkEntryMouseSelect):
+	* library/text.tcl (tkTextSelectTo): When
+	the mouse is dragged with the button down,
+	move the insertion cursor to the current
+	mouse position.
+	* tests/event.test: Add a series of tests
+	for event generation. Add tests for selection,
+	check the position of the insertion cursor.
+
 2001-03-28  Jeff Hobbs  <jeffh@gimlet.activestate.com>
 
 	* unix/configure:
